tests/health/gold/sdk/tests__lsp__double_import__project_with_bad_lock__main.toit.gold
tests/lsp/double_import/shared/shared.toit:5:8: error: Package for prefix 'pkg' not found
import pkg
       ^~~
tests/lsp/double_import/shared/shared.toit:7:17: error: Unresolved type: 'PkgType'
identify -> pkg.PkgType?:
                ^~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
